--- a/web/src/components/Corrida/Card/Card.css
+++ b/web/src/components/Corrida/Card/Card.css
@@ -3,13 +3,15 @@
     border: 1px solid #C3C3C3;
     box-shadow: 0 2px 7px 0 rgba(0,0,0, 0.15);
     display: flex;
+    flex-direction: column;
     padding: 15px;
     align-items: flex-start;
 }
 
 .corrida-card__image {
-    max-width: 100px;
-    margin-right: 20px;
+    width: 100%;
+    margin: auto;
+    border-radius: 8px;
 }
 
 .corrida-card__title {
@@ -20,5 +22,5 @@
 
 .corrida-card__footer {
     display: flex;
-    align-items: center;
+    justify-content: space-between;
 }
