--- a/web/src/components/Corrida/List/List.css
+++ b/web/src/components/Corrida/List/List.css
@@ -6,3 +6,15 @@
     margin: 10px;
     width: 30%;
 }
+
+@media screen and (max-width: 767px) {
+    .corrida-list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .corrida-list .corrida-card {
+        margin: 10px;
+        width: 90%;
+    }
+}
