--- a/web/src/components/Corrida/Search/Search.css
+++ b/web/src/components/Corrida/Search/Search.css
@@ -20,3 +20,18 @@
     padding: 0 10px;
     font-size: 16px;
 }
+
+@media screen and (max-width: 800px) {
+    .corrida-search {
+        padding: 10px;
+    }
+
+    .corrida-search__header {
+        flex-direction: column; /* Alterando a direção do flex container para coluna */
+        font-size: 10.5pt;
+    }
+
+    .corrida-search__input {
+        font-size: 14px; /* Reduzindo o tamanho da fonte para telas menores */
+    }
+}
