--- a/web/src/components/Corrida/Search/Search.css
+++ b/web/src/components/Corrida/Search/Search.css
@@ -1,13 +1,18 @@
 .corrida-search__header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: row;
+    align-items: baseline;
     margin-bottom: 20px;
 }
 
 .corrida-search__header h1 {
     text-transform: uppercase;
     color: #888;
+}
+
+.corrida-search__header img {
+    width: 100px;
+    margin-right: 20px;
 }
 
 .corrida-search__input {
@@ -21,28 +26,14 @@
     font-size: 16px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
     .corrida-search {
         padding: 10px;
     }
 
     .corrida-search__header {
         flex-direction: column; /* Alterando a direção do flex container para coluna */
-        font-size: 10.5pt;
-    }
-
-    .corrida-search__input {
-        font-size: 14px; /* Reduzindo o tamanho da fonte para telas menores */
-    }
-}
-
-@media screen and (max-width: 300px) {
-    .corrida-search {
-        padding: 10px;
-    }
-
-    .corrida-search__header {
-        flex-direction: column; /* Alterando a direção do flex container para coluna */
+        align-items: center;
         font-size: 10.5pt;
     }
 
