--- a/web/src/components/Corrida/Show/Show.css
+++ b/web/src/components/Corrida/Show/Show.css
@@ -1,3 +1,20 @@
+/* .corrida-search__header {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin-bottom: 20px;
+}
+
+.corrida-search__header h1 {
+    text-transform: uppercase;
+    color: #888;
+}
+
+.corrida-search__header img {
+    width: 100px;
+    margin-right: 20px;
+} */
+
 .corrida-show__card {
     border-radius: 8px;
     border: 1px solid #C3C3C3;
@@ -6,12 +23,6 @@
     flex-direction: column;
     padding: 25px;
     align-items: flex-start;
-}
-
-.corrida-show__header {
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
 }
 
 .corrida-show__profile {
